--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,62 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "airbnb",
+    "prettier",
+    "next/core-web-vitals"
+  ],
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "max-len": [
+      2,
+      {
+        "code": 300
+      }
+    ],
+    "no-console": 0,
+    "import/prefer-default-export": 0,
+    "no-nested-ternary": 0,
+    "no-confusing-arrow": 0,
+    "no-param-reassign": [
+      "error",
+      {
+        "props": false
+      }
+    ],
+    "no-mixed-operators": [
+      "error",
+      {
+        "allowSamePrecedence": true
+      }
+    ],
+    "camelcase": 0,
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "all",
+        "singleQuote": true,
+        "printWidth": 140,
+        "semi": true
+      }
+    ],
+    "no-return-assign": 0,
+    "no-restricted-globals": 0
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true,
+    "serviceworker": true
+  },
+  "globals": {
+    "document": true,
+    "fetch": true,
+    "jest": true,
+    "it": true,
+    "beforeEach": true,
+    "describe": true,
+    "expect": true,
+    "self": true
+  }
 }
